--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -16,9 +16,7 @@
             <div class="page page-current">
                 <div class="content">
                     <div id="banner" class="swiper-container">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide"></div>
-                        </div>
+                        <div class="swiper-wrapper"></div>
                         <div style="width:100%; border-radius:50% 50% 0 0; height:.5rem; background:#fff; overflow:hidden; position:absolute;left:0; bottom:-.1rem; z-index:99999;"></div>
                     </div>
                     <div class="content-block-title" style="margin-top:.25rem;margin-bottom:1rem">热门维修</div>
@@ -90,10 +88,7 @@
 
         <script type="text/javascript" src="framework/js/swiper.jquery.min.js"></script>
         <script>
-        var swiper = new Swiper('.swiper-container',{
-        loop : true,
-        autoplay : 6000
-        });
+
         </script>
     <script>
         function getImgNews() {
@@ -105,11 +100,15 @@
                 for (var i = 0; i < articleArr.length; i++) {
                     var itemArticle = articleArr[i];
                     $("#banner .swiper-wrapper").append("<div style='width: 100%; height: 7rem' class=\"swiper-slide\"><img  onclick=\"location='"+itemArticle.url+"'\" src=\""+itemArticle.posterImg+"\" /><h2 style='text-indent: 2em;'>"+decodeURI(itemArticle.posterTitle)+"</h2></div>")
-                    if(i==0){
-                        firstItemArticle = "<div style='width: 100%; height: 7rem' class=\"swiper-slide\"><img onclick=\"location='"+itemArticle.url+"'\" src=\""+itemArticle.posterImg+"\" /><h2 style='text-indent: 2em;'>"+decodeURI(itemArticle.posterTitle)+"</h2></div>";
-                    }
                 }
-                $("#banner .swiper-wrapper").append(firstItemArticle);
+                for (var i = 0; i < articleArr.length; i++) {
+                    var itemArticle = articleArr[i];
+                    $("#banner .swiper-wrapper").append("<div style='width: 100%; height: 7rem' class=\"swiper-slide\"><img  onclick=\"location='"+itemArticle.url+"'\" src=\""+itemArticle.posterImg+"\" /><h2 style='text-indent: 2em;'>"+decodeURI(itemArticle.posterTitle)+"</h2></div>")
+                }
+                var swiper = new Swiper('.swiper-container',{
+                    loop : true,
+                    autoplay : 6000
+                });
             })
         }
         $(function(){
